--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,14 @@
+[project]
+name = "itk-tasks"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = []
+
 [tool.ruff.lint]
 extend-select = ["I"]
 
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
-
-[dependency-groups]
-dev = [
-    "ruff>=0.14.8",
-]
